index.css
#intro {
    margin-top: 100px;
    margin-left: 45px;
    margin-bottom: 20px;
    padding: 55px;
    width: 55%;
    border-style: hidden;
    border-radius: 30px;
    text-align: center;
    color: white;
    font-size: 35px;
    font-family: 'Kalam', Verdana, sans-serif;
    background: linear-gradient(to bottom right, #6598FF, #C70AFF);

    animation-name: collapseIntro;
    animation-duration: 3s;
}

@keyframes collapseIntro {
    from {
        height: 100%;
    }

    to {
        height: 10%;
    }
}

#intro-back-container {
    justify-content: center;
    background-color: #0a53ff;
    margin-left: 45px;
    padding: 0px 55px;
    width: 55%;
}

#intro-back-container.intro-back-container-normal {
    display: flex;
}

#intro-back-container.intro-back-container-line {
    display: block;
    padding: 0px;
    margin: 0px;
}

#intro-back.intro-back-normal {
    margin-top: 80px;
    margin-bottom: 80px;
    padding: 55px;
    z-index: -1;
    width: 55%;
    height: 300px;
    border-style: hidden;
    position: fixed;
    border-radius: 20px;
    
    background: linear-gradient(to right, #c0e487, #b1bdda);
    animation: un-transform-to-line 0.5s forwards;
}

#intro-back.intro-back-line {
    /* display: none; */
    margin-top: 70px;
    /* margin-left: 10px; */
    margin-left: 90px;
    margin-bottom: 80px;
    z-index: -1;
    width: 55%;
    /* width: 1%; */
    height: 300px;
    border-style: hidden;
    position: fixed;
    border-radius: 30px;
    background: linear-gradient(to bottom, #adff29, #0a53ff);
    animation: transform-to-line 0.5s forwards;
}

@keyframes transform-to-line {
    from {
        margin-left: 45px;
        width: 45%;
    }

    to {
        margin-left: 10px;
        width: 1%;
    }
}

@keyframes un-transform-to-line {
    from {
        margin-left: 10px;
        width: 1%;
    }
    
    to {
        /* margin-left: 45px; */
        width: 45%;
    }
}

#close_intro_button {
    height: 25px;
    width: 25px;
    border-style: hidden;
    border-radius: 50%;
    background-color: white;
    float: right !important;
    color: black;
    font-size: 15px;
    font-family: sans-serif;
    user-select: none;

    display: flex;
    align-items: center;
    justify-content: center;
}

.Hi_text_in_intro {
    font-size: 65px;
}

hr {
    margin-right: 45px;
    margin-left: 45px;
}

h3 {
    margin-left: 50px;
    font-size: 30px;
}

#projectsGroup {
    margin-top: 30px;
    margin-bottom: 80px;
    margin-left: 05px;
    list-style-type: none;
}

.project {
    display: inline-block;
    margin-left: 40px;
    margin-right: 40px;
    margin-top: 10px;
}

#projectsGroup img {
    border-radius: 17px;
    width: 300px;
}


#projectsGroup img:hover{ 
    animation: blurOut 1s forwards;;
}

#projectsGroup img:not(:hover){ 
    animation: blurIn 1s forwards;;
}

@keyframes blurOut {
    from {
        filter: blur(0px);
    }

    to {
        filter: blur(7px);
    }
}


@keyframes blurIn {
    from {
        filter: blur(7px);
    }

    to {
        filter: blur(0px);
    }
}

.projectLink {
    display: block;
    font-weight: bold;
    text-decoration: none;
    color: #4280D7;
    text-align: center;
    padding-top: 10px;
    font-size: 25px;
}


#alsoInterestedInContainer {
    margin-left: 80px;
    margin-bottom: 100px;
    margin-top: 20px;
    margin-right: 100px;    
}

.alsoInterestedInItemContainer {
    display: flex;
    margin: 25px auto;
}

.alsoInterestedInImgDIV {
    flex: 1;
}

.alsoInterestedInImg {
    width: 400px;
    border-radius: 20px;
}

.alsoInterestedInText {
    flex: 2;
    margin-left: 30px;
}

.alsoInterestedInText h4 {
    font-size: 30px;
    margin: 10px 0px;
    font-family: 'Open Sans', Tahoma, Verdana, sans-serif;
    font-weight: 600;
}

.alsoInterestedInText p {
    font-size: 20px;
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

@media (max-width: 600px) {
    #intro {
        width: auto;
        margin-left: 10px;
        margin-right: 10px;
        font-size: 25px;
        animation: floatUp 0.75s 0.25s;
        animation-fill-mode: forwards;
        /* box-shadow: 0px 0px  60px #220affc0; */
    }

    #intro-hr {
        margin-right: 5px;
        margin-left: 5px;
    }

    #intro-back-container {
        display: none !important;
    }
 
    @keyframes floatUp {
        from {
            box-shadow: 0px 0px  0px #9d0aff9a;
            margin-top: 100px;
        }

        to {
            box-shadow: 0px 0px  60px #220affc0;
            margin-top: 80px;
        }
    }

    h3 {
        margin-left: 20px !important;
    }

    .hr-under-h3 {
        margin-left: 20px !important;
        width: 90%;
        margin-right: 70px;
    }

    #projectsGroup {
        margin-top: 10px;
        margin-bottom: 80px;
        margin-left: 0px;
        padding-left: 20px;
        padding-right: 20px;
        list-style-type: none;
    }

    .project {
        display: inline-block;
        margin-left: auto;
        margin-right: auto;
        margin-top: 25px;
        width: 100%;
    }

    .project img {
        width: 75% !important;
    }

    .projectLink {
        display: block;
        font-weight: bold;
        text-decoration: none;
        color: #4280D7;
        text-align: left;
        padding-left: 10px;
        padding-top: 10px;
        font-size: 25px;
    }

    .alsoInterestedInItemContainer {
        display: inline;
        width: 100%;
    }

    #alsoInterestedInContainer {
        margin-left: 20px;
        margin-right: 20px;
    }

    .alsoInterestedInImg {
        width: 100%;
    }

    .alsoInterestedInImgDIV {
        width: 100%;
    }

    .alsoInterestedInText {
        margin-left: 0px;
    }
}

@media (max-width: 638px) {
    .alsoInterestedInImg {
        width: 300px;
    }

    .alsoInterestedInImgDIV {
        width: 100%;
    }
}

/* Dark Theme */
@media (prefers-color-scheme: dark) {
    @media (max-width: 600px) {
        #intro {
            animation: floatUpDARK 0.75s 0.25s;
            animation-fill-mode: forwards;
        }

        @keyframes floatUpDARK {
            from {
                box-shadow: 0px 0px  0px #4b007c9a;
                margin-top: 100px;
            }
    
            to {
                box-shadow: 0px 0px 60px #7a8dce;
                margin-top: 80px;
            }
        }
    }
}

